# Proto-mni-viewer

./: CMakeLists.txt  animationmanagementwidget.cxx  animationmanagementwidget.h  gradients.cxx  gradients.h  hoverpoints.cxx  hoverpoints.h  lightingpropertieswidget.cxx  lightingpropertieswidget.h  lookuptableselectionwidget.cxx  lookuptableselectionwidget.h  main.cxx  mainwindow.cxx  mainwindow.h  proto_mni_viewer.nsi  protomniviewer.qrc  saveablepolygonalsurfacepointplacer.cxx  saveablepolygonalsurfacepointplacer.h  shadingmodelselectionwidget.cxx  shadingmodelselectionwidget.h  surfaceselectionwidget.cxx  surfaceselectionwidget.h  textpropertyeditor.cxx  textpropertyeditor.h
docs/: HLD.vpp
